# Selvedge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs
crates/api/tests/: api_contract.rs
crates/chatgpt-api/: Cargo.toml  README.md
crates/chatgpt-api/src/: lib.rs
crates/chatgpt-api/tests/: public_api.rs  request_contract.rs  stream_integration.rs
crates/chatgpt-api/tests/support/: mod.rs
crates/chatgpt-auth/: Cargo.toml  README.md
crates/chatgpt-auth/src/: auth_file.rs  config.rs  jwt.rs  lib.rs  lock.rs  refresh.rs  resolve.rs
crates/chatgpt-auth/tests/: parse_contract.rs  public_api.rs  resolve_integration.rs
crates/chatgpt-auth/tests/support/: mod.rs
crates/chatgpt-login/: Cargo.toml  README.md
crates/chatgpt-login/src/: auth_file.rs  config.rs  device_code.rs  id_token.rs  lib.rs  token_exchange.rs
crates/chatgpt-login/tests/: complete_login_integration.rs  device_code_start_integration.rs  public_api.rs
crates/chatgpt-login/tests/support/: mod.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: config_resolution.rs  lib.rs  redaction.rs  redirect_runtime.rs  request_prep.rs  runtime.rs  single_hop.rs
crates/client/tests/: http_integration.rs
crates/client/tests/support/: mod.rs
crates/command-model/: Cargo.toml  README.md
crates/command-model-api-slice/: Cargo.toml  README.md
crates/command-model-api-slice/src/: lib.rs
crates/command-model-api-slice/tests/: command_contract.rs
crates/command-model/src/: lib.rs
crates/command-model/tests/: command_contract.rs
crates/config/: Cargo.toml  README.md
crates/config-model/: Cargo.toml  README.md
crates/config-model/src/: lib.rs
crates/config-model/tests/: model_contract.rs
crates/config/examples/: README.md  layered_sources.rs  load_defaults.rs  runtime_updates.rs
crates/config/src/: lib.rs
crates/config/tests/: public_api.rs  store_behavior.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/tests/: runtime_contract.rs
crates/db/: Cargo.toml  README.md
crates/db/src/: lib.rs  schema.sql
crates/db/tests/: db_contract.rs
crates/domain-model/: Cargo.toml  README.md
crates/domain-model-api-slice/: Cargo.toml  README.md
crates/domain-model-api-slice/src/: lib.rs
crates/domain-model-api-slice/tests/: domain_contract.rs
crates/domain-model/src/: lib.rs
crates/domain-model/tests/: domain_contract.rs
crates/events/: Cargo.toml  README.md
crates/events/src/: lib.rs
crates/events/tests/: events_contract.rs
crates/logging/: Cargo.toml  README.md
crates/logging/src/: lib.rs
crates/router/: Cargo.toml  README.md
crates/router/src/: lib.rs
crates/router/tests/: router_contract.rs
crates/task-runtime-factory/: Cargo.toml  README.md
crates/task-runtime-factory/src/: lib.rs
crates/task-runtime-factory/tests/: factory_contract.rs
scripts/: bootstrap.sh  create-worktree.sh
src/: lib.rs  main.rs
tests/: config_integration.rs  stdout_stderr_integration.rs  worktree_tool_integration.rs
xtask/: Cargo.toml
xtask/src/: agents_index.rs  lib.rs  main.rs
