[workspace]
members = ["crates/config", "crates/config-model"]
resolver = "2"

[package]
name = "selvedge"
edition = "2024"
publish = false
description = "Rust project foundation for Selvedge"

[dependencies]

[dev-dependencies]
selvedge-config = { path = "crates/config" }
selvedge-config-model = { path = "crates/config-model" }
tempfile = "3.14.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
