[package]
name = "chatgpt-api"
edition = "2024"
publish = false

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
futures-core = "0.3.31"
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
selvedge-client = { path = "../client" }
selvedge-config = { path = "../config" }
selvedge-config-model = { path = "../config-model" }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }

[dependencies.chatgpt-auth]
path = "../chatgpt-auth"
package = "chatgpt-auth"

[dev-dependencies]
async-stream = "0.3.6"
axum = "0.8.6"
base64 = "0.22.1"
selvedge-logging = { path = "../logging" }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
