[package]
name = "chatgpt-login"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
fs2 = "0.4.3"
http = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.145"
selvedge-client = { path = "../client" }
selvedge-config = { path = "../config" }
tempfile = "3.23.0"

[dev-dependencies]
axum = "0.8.6"
base64 = "0.22.1"
serde_json = "1.0.145"
selvedge-logging = { path = "../logging" }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
