[package]
name = "selvedge-client"
edition = "2024"
publish = false

[dependencies]
async-stream = "0.3.6"
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream"] }
rustls-pemfile = "2.2.0"
selvedge-config = { path = "../config" }
selvedge-logging = { path = "../logging" }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["time"] }
url = "2.5.7"
zstd = "0.13.3"

[dev-dependencies]
axum = "0.8.6"
rcgen = "0.14.5"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
