[package]
name = "selvedge-command-model-api-slice"
edition = "2024"
publish = false

[dependencies]
selvedge-domain-model-api-slice = { path = "../domain-model-api-slice" }
tokio = { version = "1.42.0", features = ["sync"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
