[package]
name = "selvedge-command-model"
edition = "2024"
publish = false

[dependencies]
selvedge-domain-model = { path = "../domain-model" }
tokio = { version = "1.42.0", features = ["sync"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
