[package]
name = "selvedge-config"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
selvedge-config-model = { path = "../config-model" }
tempfile = "3.14.0"
thiserror = "2.0.3"
toml = "0.8.19"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
