[package]
name = "selvedge-events"
edition = "2024"
publish = false

[dependencies]
selvedge-command-model = { path = "../command-model" }
tokio = { version = "1.42.0", features = ["rt", "sync"] }

[dev-dependencies]
selvedge-domain-model = { path = "../domain-model" }
tokio = { version = "1.42.0", features = ["macros", "rt", "sync", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
