[package]
name = "selvedge-logging"
edition = "2024"
publish = false

[dependencies]
selvedge-config = { path = "../config" }
selvedge-config-model = { path = "../config-model" }

[dev-dependencies]
tempfile = "3.14.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
