[package]
name = "selvedge-task-runtime-factory"
edition = "2024"
publish = false

[dependencies]
selvedge-command-model = { path = "../command-model" }
selvedge-core = { path = "../core" }
selvedge-db = { path = "../db" }
selvedge-domain-model = { path = "../domain-model" }
tokio = { version = "1.42.0", features = ["rt", "sync"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt", "sync", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
